--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,10 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+
+    implementation 'com.google.firebase:firebase-core:11.2.0'
+    implementation 'com.google.firebase:firebase-database:11.2.0'
+
 }
+
+apply plugin: 'com.google.gms.google-services'
